--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <li id="work" class="panel">
       <section class="intro">
         <p>
-          AKOSUA DANSO is a developer & designer creating
+          <Strong>AKOSUA DANSO</Strong> is a developer & designer creating
           thoughtful, interactive, and story-driven work.
         </p>
       </section>
@@ -49,21 +49,21 @@
       <section class="projects">
         <a class="project-card" href="projects/craft-connect.html">
             <img src="images/cctitle.png" alt="Craft Connect preview">
-          <h4>UX/UI Design</h4>
+          <sub class="project-type">UX/UI Design</sub>
           <p><strong>Craft Connect -> Hobbyist </strong> </p>
           <sub>A community-driven platform for discovering crafts, exchanging materials, and connecting with local creatives.</sub>
         </a>
 
         <a class="project-card" href="projects/project-template.html">
             <img src="images/placeholder.jpeg" alt="Project preview">
-          <h4>Web Design</h4>
-          <p><strong>Project Two</strong></p>
+          <sub class="project-type">Mobile App Development & UI/UX Design </sub>
+          <p><strong>PocketShelf</strong></p>
           <sub>Another short description.</sub>
         </a>
 
         <a class="project-card" href="projects/project-template.html">
             <img src="images/placeholder.jpeg" alt="Project preview">
-            <h4>Web Design</h4>
+            <sub class="project-type">Web Design</sub>
             <p><strong>Project Two</strong></p>
             <sub>Another short description.</sub>
           </a>
@@ -102,7 +102,7 @@
   <!-- ================= FOOTER ================= -->
   <footer class="footer">
     <a href="#" target="_blank">Resume</a>
-    <a href="#" target="_blank">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/akosuad/" target="_blank">LinkedIn</a>
     <a href="mailto:you@email.com">Email</a>
   </footer>
 
