--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata:wght@200..900&family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Cutive+Mono&family=Inconsolata:wdth,wght@109,200..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
 <body class="home-page">
@@ -41,22 +41,22 @@
         <section class="projects">
           <a class="project-card" href="projects/craft-connect.html">
             <img src="images/cctitle.png" alt="Craft Connect preview">
-            <sub class="project-type">UX/UI Design</sub>
+            <sub class="project-type">UX / UI Design</sub>
             <p><strong>Craft Connect -> Hobbyist</strong></p>
             <sub>A community-driven platform for discovering crafts, exchanging materials, and connecting with local creatives.</sub>
           </a>
 
           <a class="project-card" href="projects/project-template.html">
             <img src="images/pstitle.png" alt="Project preview">
-            <sub class="project-type">Mobile Development & UI/UX Design</sub>
+            <sub class="project-type">Mobile Development & UI / UX Design</sub>
             <p><strong>PocketShelf</strong></p>
             <sub>Another short description.</sub>
           </a>
 
           <a class="project-card" href="projects/project-template.html">
-            <img src="images/placeholder.jpeg" alt="Project preview">
-            <sub class="project-type">Web Design</sub>
-            <p><strong>Project Two</strong></p>
+            <img src="images/zootitle.png" alt="Project preview">
+            <sub class="project-type">UX / Experience Design</sub>
+            <p><strong>Rosmand Gifford Zoo Community Engagement Strategy</strong></p>
             <sub>Another short description.</sub>
           </a>
         </section>
