--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       <div class="work-container">
         <section class="intro">
           <p>
-            <strong>AKOSUA DANSO</strong> is a developer & designer creating
-            thoughtful, interactive, and story-driven work.
+            <strong>AKOSUA DANSO</strong> is a designer and developer who explores interaction, storytelling, and human-centered problem solving.
           </p>
         </section>
 
