--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="work-container">
         <section class="intro">
           <p>
-            <strong>AKOSUA DANSO</strong> is a designer and developer who explores interaction, storytelling, and human-centered problem solving.
+            <strong>AKOSUA DANSO</strong> is a developer and designer who explores interaction, storytelling, and human-centered problem solving.
           </p>
         </section>
 
@@ -103,7 +103,8 @@
     <!-- ABOUT PANEL -->
     <li id="about" class="panel">
       <section class="about">
-        <p>I’m a designer interested in systems, culture, and interaction. This is where your longer bio goes.</p>
+        <p class="abtblurb">
+        I’m a developer & designer with a foundation in computer science, focused on designing systems that balance user needs, business goals, and engineering constraints. I work best at the intersection of design and development. I use my technical understanding to make better product decisions and build intuitive, accessible experiences.</p>
         <p><strong>Skills:</strong> Design, Web, Motion<br>
         <strong>Email:</strong> you@email.com</p>
       </section>
