Descript & Creative Work Panels

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <main>
   <!-- HEADER -->
   <header class="header">
-    <div id="symbol" class="symbol" onclick="goWork()">ಇ.</div>
+    <div id="symbol" class="symbol" onclick="goWork()">☼</div>
     <nav class="nav">
       <span id="worktop" class="nav-item active" onclick="goWork()">Design Work</span>
       <span id="playtop" class="nav-item" onclick="goPlay()">Creative Work</span>
@@ -49,13 +49,13 @@
             <img src="images/pstitle.png" alt="Project preview">
             <sub class="project-type">Mobile Development & UI / UX Design</sub>
             <p><strong>PocketShelf</strong></p>
-            <sub>Another short description.</sub>
+            <sub>A mobile reading tracker that makes it easy to log, organize, and reflect on your reads.</sub>
           </a>
 
           <a class="project-card" href="projects/project-template.html">
             <img src="images/zootitle.png" alt="Project preview">
             <sub class="project-type">UX / Experience Design</sub>
-            <p><strong>Rosmand Gifford Zoo Community Engagement Strategy</strong></p>
+            <p><strong>Rosamond Gifford Zoo Community Engagement Strategy</strong></p>
             <sub>Another short description.</sub>
           </a>
         </section>
@@ -74,14 +74,25 @@
           <a class="project-card wide" href="#">
             <img src="images/assert.png" alt="">
             <sub>Typography</sub>
-          </a> -->
+          </a> 
 
-          <a class="project-card wide" href="#">
+           <a class="project-card wide" href="#">
             <img src="images/placeholder.jpeg" alt="">
             <sub>Animation</sub>
-          </a>
+          </a> -->
+
+          <a class="project-card wide" href="#" aria-label="Daily UI Figma Prototype">
+            <div class="embed-wrapper">
+              <iframe
+                src="https://embed.figma.com/proto/qAzeMTEk4conLfbdoHIlWB/DailyUI-Challenges?page-id=14%3A107&node-id=49-110&p=f&viewport=246%2C523%2C0.14&scaling=scale-down&content-scaling=fixed&starting-point-node-id=49%3A110&embed-host=share"
+                allowfullscreen
+                loading="lazy"
+              ></iframe>
+            </div>
+            <sub>Animation</sub>
+          </a>          
       
-          <a class="project-card tall" href="#">
+          <a class="project-card square href="#">
             <img src="images/socmedia.png" alt="">
             <sub>Poster</sub>
           </a>
