--- a/projects/craft-connect.html
+++ b/projects/craft-connect.html
@@ -44,7 +44,7 @@
 
 <!-- ================= HEADER ================= -->
 <header class="header">
-  <a href="../index.html" class="symbol" id="symbol">ಇ.</a>
+  <a href="../index.html" class="symbol" id="symbol">☼</a>
 
   <nav class="nav">
     <a href="../index.html" class="nav-item">UX Design</a>
