--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="work-container">
         <section class="intro">
           <p>
-            <strong>AKOSUA DANSO</strong> is a developer and designer who explores interaction, storytelling, and human-centered problem solving.
+            <strong>AKOSUA DANSO</strong> is a developer & designer who explores interaction, storytelling, and human-centered problem solving.
           </p>
         </section>
 
