renamed media, moved images and files finished craft connect

--- a/projects/project-template.html
+++ b/projects/project-template.html
@@ -23,8 +23,8 @@
   <a href="../index.html" class="symbol" id="symbol">☼</a>
 
   <nav class="nav">
-    <a href="../index.html" class="nav-item">UX Design</a>
-    <a href="../index.html#play" class="nav-item">Visual Design</a>
+    <a href="../index.html" class="nav-item">Design Work</a>
+    <a href="../index.html#play" class="nav-item">Creative Work</a>
     <a href="../index.html#about" class="nav-item">About</a>
   </nav>
 </header>
