pocketshelf case study in progress

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <sub>A community-driven platform for discovering crafts, exchanging materials, and connecting with local creatives.</sub>
           </a>
 
-          <a class="project-card" href="projects/project-template.html">
-            <img src="media/pstitle.png" alt="Project preview">
+          <a class="project-card" href="projects/pocketshelf.html">
+            <img src="media/pocketshelf/pstitle.png" alt="Project preview">
             <sub class="project-type">Mobile Development & UI / UX Design</sub>
             <p><strong>PocketShelf</strong></p>
             <sub>A mobile reading tracker that makes it easy to log, organize, and reflect on your reads.</sub>
