--- a/projects/pocketshelf.html
+++ b/projects/pocketshelf.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Craft Connect Case Study" />
+  <meta name="description" content="PocketShelf Case Study" />
   <title>Craft Connect → Hobbyist — Your Name</title>
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="project-style.css" />
@@ -59,21 +59,21 @@
   <!-- ===== HERO ===== -->
   <section class="project-hero">
     <div class="hero-left">
-      <h1>Craft Connect → Hobbyist</h1>
+      <h1>PocketShelf</h1>
       <sub class="subtitle">
-        UX Design, Web Application to Mobile Application
+        UX / UI Design, Mobile Application Development
       </sub>
-      <img src="../media/craftconnect/cctech.png" class="techicons" width="300px" alt="Craft Connect Tech Used">
+      <img src="../media/pocketshelf/pstech.png" class="techicons" width="300px" alt="PocketShelf Tech Used">
     </div>
 
     <div class="hero-right">
       <p>
-        A community-driven platform for discovering crafts, exchanging materials, and connecting with local creatives.
+        A mobile reading tracker that makes it easy to log, organize, and reflect on your reads.
       </p>
     </div>
   </section>
 
-  <img src="../media/craftconnect/ccintro.png" width="700px" class="center-image" alt="Craft Connect intro image">
+  <img src="../media/pocketshelf/pstitle.png" width="700px" class="center-image" alt="Craft Connect intro image">
 
   <!-- ===== CASE STUDY CONTENT ===== -->
   <section class="project-content">
@@ -81,37 +81,37 @@
     <div>
       <h2>Context & Overview</h2>
       <p>
-        Craft Connect began as a collaborative team project in a software design course where the goal was to design and build a unique application from scratch. In a group of four, we researched user needs, defined product requirements, and scoped a platform aimed at helping crafters discover new skills, exchange surplus materials, and connect with local creative communities.
+        PocketShelf began as a class project in a mobile application development course, where the goal was to design and build a mobile app from concept to implementation. I led the product design for the project, focusing on defining the experience, user flows, and interface design, while collaborating with teammates during development.
       </p>
       <p>
-        After the course ended, I revisited the concept independently and reimagined it as a focused product design case study, refining the scope, simplifying the experience, and translating the idea into a usable, technically feasible application.
+        While many reading apps emphasize progress tracking or social features, I wanted to explore how a mobile experience could better support organization and reflection, treating books not just as items to check off, but as a more memorable experience
       </p>
-      <img src="../media/craftconnect/ccteam.png" width="700px" class="center-image" alt="teammates and roles">
+      <p>
+        The product was designed as a mobile-first experience to support quick interactions, visual browsing, and lightweight reflection throughout a user’s reading journey.
+      </p>
+      <img src="../media/pocketshelf/psteaminfo.png" width="600px" class="center-image" alt="teammates and roles">
 
       <h3>The Problem</h3>
-      <p>Many people interested in creative hobbies face a fragmented and frustrating experience:</p>
+      <p>Many readers struggle to keep track of what they’ve read, what they want to read next, and what they’ve taken away from those books. Tools already out there often feel overly social, rigid, or transactional, sometimes prioritizing completion metrics over personal meaning.</p>
       <ul>
-        <li>Beginners struggle to find clear starting points and trustworthy tutorials</li>
-        <li>Experienced crafters often have leftover materials with no easy way to share them</li>
-        <li>Craft communities are scattered across forums and social platforms, often with poor moderation and low discoverability</li>
+        <li>Readers want a simple way to organize books without friction</li>
+        <li>Important moments, quotes, or reflections are easily forgotten</li>
+        <li>Switching between multiple tools (notes apps, bookmarks, reading trackers) creates fragmentation</li>
       </ul>
-      
-      <h3>Key User Needs</h3>
-      <ul>
-        <li>New crafters need a low-pressure way to discover projects without feeling overwhelmed</li>
-        <li>Users with extra materials want a simple, local-first way to share or exchange supplies</li>
-        <li>Community members want safer, more positive interactions than existing forums provide</li>
-        <li>All users need clear navigation and accessibility regardless of technical experience</li>
-      </ul>
-      <img src="../media/craftconnect/ccsystemdiagram.png" width="700px" class="center-image" alt="System/Class Diagram">
 
-      <h3>Key User Needs</h3>
+      <h3>Understanding User Needs</h3>
+      <p>Through early exploration, research, and analysis of existing reading apps, we focused on a few core user needs:</p>
       <ul>
-        <li>New crafters need a low-pressure way to discover projects without feeling overwhelmed</li>
-        <li>Users with extra materials want a simple, local-first way to share or exchange supplies</li>
-        <li>Community members want safer, more positive interactions than existing forums provide</li>
-        <li>All users need clear navigation and accessibility regardless of technical experience</li>
+        <li>Readers want to visually browse their collection in a way that feels personal </li>
+        <li>They need a lightweight way to capture memories, quotes, or thoughts while reading </li>
+        <li>The experience should feel calm and intentional, not gamified or competitive </li>
+        <li> Core actions should be fast and accessible on mobile </li>
       </ul>
+      <p>These helped to build both the structure of the app and its later implementation.</p>
+
+      <h3>Defining the Experience</h3>
+      <p>As a team, we took apart and thought of Craft Connect as the broad system rather than a single feature. We identified key system components like users, materials, tutorials, and local communities and how they would interact.</p>
+      <img src="../media/craftconnect/ccsystemdiagram.png" width="700px" class="center-image" alt="System/Class Diagram">
 
       <h3>Technical Feasibility & Implementation</h3>
       <p>We implemented an early version of Craft Connect to validate technical feasibility and explore how the concept translated into a real application. Working with React and JavaScript, we focused on:</p>
@@ -224,14 +224,14 @@
 
   <!-- ===== IMAGE GALLERY ===== -->
   <section class="project-gallery">
-    <img src="../media/craftconnect/ccscreens.png" width="2000px" alt="System/Class Diagram">
+    <img src="../media/pocketshelf/psscreens.png" width="2000px" alt="System/Class Diagram">
   </section>
 
   <!-- ===== ROLE SECTION RIGHT-ALIGNED ===== -->
   <section style="display:flex; justify-content:flex-end; margin:4em 0 2em;">
     <p style="text-align:right; line-height:1.8;">
       Designer, Developer<br>
-      Academic -> Personal Project
+      Academic Project
     </p>
   </section>
   
