--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <a href="#" target="_blank">Resume</a>
+    <a href="https://drive.google.com/file/d/1yWleZP4DtqkOpz2B-ByAhnCd-BfsIb6Z/view" target="_blank">Resume</a>
     <a href="https://www.linkedin.com/in/akosuad/" target="_blank">LinkedIn</a>
-    <a href="mailto:you@email.com">Email</a>
+    <a href="mailto:akosua.k.danso@gmail.com">Email</a>
   </footer>
 </main>
 
