--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Cutive+Mono&family=Inconsolata:wdth,wght@109,200..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Besley:ital,wght@0,400..900;1,400..900&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Cutive&family=Cutive+Mono&family=Noticia+Text:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
 <body class="home-page">
@@ -52,12 +52,11 @@
             <sub>A mobile reading tracker that makes it easy to log, organize, and reflect on your reads.</sub>
           </a>
 
-          <a class="project-card" href="projects/project-template.html">
-            <img src="media/zootitle.png" alt="Project preview">
+          <a class="project-card" href="projects/wildbeyondthezoo.html">
+            <img src="media/rgz/zootitle.png" alt="Project preview">
             <sub class="project-type">UX / Experience Design</sub>
-            <p><strong>Rosamond Gifford Zoo Community Engagement Strategy</strong></p>
-            <sub>Another short description.</sub>
-          </a>
+            <p><strong> Rosamond Gifford Zoo: Brand Experience & Design Thinking Project</strong></p>
+            <sub>Collaborative design-thinking project developed for the Rosamond Gifford Zoo in Syracuse.  Reimaging the zoo’s brand as a citywide experience.</sub>
         </section>
       </div>
     </li>
