RGZ Text Editing

--- a/projects/wildbeyondthezoo.html
+++ b/projects/wildbeyondthezoo.html
@@ -80,16 +80,14 @@
 
     <div>
       <h2>Context & Overview</h2>
-      <p>The project was a 15-week endeavor with a real-client design challenge for the Rosamond Gifford Zoo. The course was structured around three major phases, and with each phase our groups were reshuffled, meaning we repeatedly inherited another team’s work, built on their research, and pushed the project forward.</p>
-      <p>Each week, our group was responsible for developing the inherited ideas, refining the strategy, and presenting work, findings and ideas that showed clear progress. This structure mirrored real professional handoffs, teaching us how to collaborate across teams, absorb new information quickly, and maintain continuity in a long-term project.</p>
+      <p>The project was a 15-week endeavor with a real-client design challenge for the Rosamond Gifford Zoo. The course was structured around three major phases, and with each phase our groups were reshuffled, as a result we repeatedly inherited another team’s work, built on their research, and pushed the project forward.</p>
+      <p>Each week, our group was responsible for developing the inherited ideas, pushing them, and presenting work, findings and ideas that showed clear progress. Mirroring real professional handoffs, teaching us how to collaborate across teams, absorb new information quickly, and maintain continuity in a long-term project.</p>
       <img src="../media/rgz/timelline.png" width="1000px" class="center-image" alt="teammates and roles">
 
       <h3>Design Thinking</h3>
-      <p>This semester, we worked through the full design thinking process, a human-centered,
-        iterative framework built around the phases of Empathize, Define, Ideate, Prototype, and Test.</p>
         <img src="../media/rgz/designthinking.png" width="1100px" class="center-image" alt="teammates and roles">
         <p>
-        Instead of moving through these steps in a straight line, we constantly cycled back to earlier discoveries, revisiting research, reframing problems, and integrating new insights as they emerged. This ongoing, circular movement through the design thinking phases shaped our project every week and taught us how to stay flexible, curious, and user-focused throughout a complex, evolving design process.
+        Instead of moving through these steps in a straight line, we constantly cycled back to earlier discoveries, revisiting research, reframing problems, and integrating new insights as they emerged
       </p>
 
       <h3>Problem Solving</h3>
@@ -98,7 +96,7 @@
         questions, we interviewed real people, we gathered diverse perspectives, and repeatedly visited the zoo to experience it firsthand. By digging deeper, we developed a clearer understanding of the client’s true challenges and were able to propose solutions that were more meaningful, strategic, and impactful.</p>
 
       <h3>Teamwork</h3>
-      <p> Teamwork this semester went beyond our assigned groups, our entire cohort functioned as one collaborative team. Although we worked in groups of five, we constantly checked in with classmates who previously handled our project, sharing feedback and guidance to keep the work consistent, and make sure we were able to present the client with five unique solutions, each targeting a different issue.</p>
+      <p> Teamwork this semester went beyond our assigned groups, our entire class functioned as one collaborative team. We constantly checked in with classmates who previously handled our project, and made sure we were able to present the client with five unique solutions, each targeting a different issue.</p>
       <p>Within our small groups, we organized meeting times, divided tasks, and brainstormed together to move the project forward each week. The process required clear communication, flexibility, and mutual support, closely mirroring how real design teams operate across shifting roles and shared responsibilities.</p>
 
       <h3>Research</h3>
