About Section Update

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <sub>UI Design</sub>
           </a>          
       
-          <a class="project-card square href="#">
+          <a class="project-card square" href="#">
             <img src="media/socmedia.png" alt="">
             <sub>Digital Art</sub>
           </a>
@@ -115,8 +115,14 @@
       <section class="about">
         <p class="abtblurb">
         I’m a developer & designer with a foundation in computer science, focused on designing systems that balance user needs, business goals, and engineering constraints. I work best at the intersection of design and development. I use my technical understanding to make better product decisions and build intuitive, accessible experiences.</p>
-        <p><strong>Skills:</strong> Design, Web, Motion<br>
-        <strong>Email:</strong> you@email.com</p>
+        <p><strong>Skills:</strong>
+          <br> Design: Figma, Photoshop, Illustrator, InDesign
+          <br> Prototyping & UX: Wireframing, User Flows, Style Guides
+          <br> Front-End: HTML, CSS, JavaScript
+          <br> Tools: Microsoft Power BI, Excel, Unity, Qualtrics, Jira, Visual Studio, Git, Agile (Scrum)
+          <br> Coding Languages: Python, Haskell, Java, C/C++, Racket, SQL, C#
+          <br>
+        <strong>Email:</strong>akosua.k.danso@gmail.com</p>
       </section>
     </li>
   </ul>
