renamed RGZ Project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a class="project-card" href="projects/wildbeyondthezoo.html">
             <img src="media/rgz/zootitle.png" alt="Project preview">
             <sub class="project-type">UX / Experience Design</sub>
-            <p><strong> Rosamond Gifford Zoo: Brand Experience & Design Thinking Project</strong></p>
+            <p><strong>Rosamond Gifford Zoo: Wild Beyond The Zoo</strong></p>
             <sub>Collaborative design-thinking project developed for the Rosamond Gifford Zoo in Syracuse.  Reimaging the zoo’s brand as a citywide experience.</sub>
         </section>
       </div>
