--- a/projects/wildbeyondthezoo.html
+++ b/projects/wildbeyondthezoo.html
@@ -59,9 +59,9 @@
   <!-- ===== HERO ===== -->
   <section class="project-hero">
     <div class="hero-left">
-      <h1>Rosamond Gifford Zoo: Brand Experience & Design Thinking Project</h1>
+      <h1>Rosamond Gifford Zoo: Wild Beyond The Zoo</h1>
       <sub class="subtitle">
-        UX / Experience Design, Design Thinking & Brand Strategy
+        UX / Experience Design, Design Thinking, Brand Experience & Strategy
       </sub>
       <img src="../media/rgz/rgztechicons.png" class="techicons" width="300px" alt="PocketShelf Tech Used">
     </div>
