--- a/projects/pocketshelf.html
+++ b/projects/pocketshelf.html
@@ -162,7 +162,11 @@
   <!-- ===== IMAGE GALLERY ===== -->
   <section class="project-gallery">
     <img src="../media/pocketshelf/psscreens.png" width="2000px" alt="System/Class Diagram">
+    <p class="center-image">View the Github here!</p>
   </section>
+  <a href="https://github.com/mhkerchen/PocketShelf">
+  <img src="../media/github.png" width="20px" class="github" alt="Craft Connect intro image">
+  </a>
 
   <!-- ===== ROLE SECTION RIGHT-ALIGNED ===== -->
   <section style="display:flex; justify-content:flex-end; margin:4em 0 2em;">
