--- a/projects/craft-connect.html
+++ b/projects/craft-connect.html
@@ -225,7 +225,12 @@
   <!-- ===== IMAGE GALLERY ===== -->
   <section class="project-gallery">
     <img src="../media/craftconnect/ccscreens.png" width="2000px" alt="System/Class Diagram">
+    <p class="center-image">View the Github here!</p>
   </section>
+
+  <a href="https://github.com/mmochaa/Craft-Connect">
+    <img src="../media/github.png" width="20px" class="github" alt="Craft Connect intro image">
+    </a>
 
   <!-- ===== ROLE SECTION RIGHT-ALIGNED ===== -->
   <section style="display:flex; justify-content:flex-end; margin:4em 0 2em;">
