--- a/projects/craft-connect.html
+++ b/projects/craft-connect.html
@@ -224,7 +224,8 @@
 
   <!-- ===== IMAGE GALLERY ===== -->
   <section class="project-gallery">
-    <img src="../media/craftconnect/ccscreens.png" width="2000px" alt="System/Class Diagram">
+     <img src="../media/craftconnect/ccscreens.png" width="2000px" alt="Craft Connect Final Screens">
+     <iframe class="center-image" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/oGzwHxNBOhpAbFSXZLa7Vz/CraftConnect-Redesign?page-id=1291%3A644&node-id=1291-678&viewport=201%2C7%2C0.2&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1291%3A678&embed-host=share" allowfullscreen></iframe>
     <p class="center-image">View the Github here!</p>
   </section>
 
